example-nginx/example-nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-example-deployment
  labels: 
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: artifactory.vsk.ru/registry-1.docker.io/nginxinc/nginx-unprivileged:1.20
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-example-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
