example-nginx/example-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-nginx-ingress
spec:
  rules:
    - host: example-nginx.apps.dev-okd.vsk.ru
      http:
        paths:
          - backend:
              service: 
                name: nginx-example-service
                port:
                  number: 8080
            pathType: Prefix
            path: /
  tls:
    - secretName: example-nginx-crt
      hosts:
        - example-nginx.apps.dev-okd.vsk.ru
